welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: value fini
fini = false
^BDRBuggle:2: error: not found: value fini
while (fini!=true) {
       ^BDRBuggle:38: error: not found: value fini
  else fini=true
       ^